--- a/src/navbar-player.html
+++ b/src/navbar-player.html
@@ -18,6 +18,14 @@
   </head>
   <body>
 
+    <!-- Navbar -->
+
+    <!-- End of Navbar -->
+
+    <!-- Player -->
+    
+    <!-- End of Player -->
+
 
 
     
