--- a/src/navbar-player.html
+++ b/src/navbar-player.html
@@ -17,16 +17,9 @@
     <title>Login</title>
   </head>
   <body>
-
-    <!-- Navbar -->
-
-    <!-- End of Navbar -->
-
-    <!-- Player -->
     
-    <!-- End of Player -->
-
-
+    <!--  -->
+testing
 
     
     <script src="./app.js"></script>
