--- a/src/navbar-player.html
+++ b/src/navbar-player.html
@@ -27,8 +27,7 @@
 
   <!-- Player -->
 
-  <!--  ehy I'm davide working on the player -->
-
+  <div class="container d-flex flex-row justify-content-center">ciao</div>
 
   <!-- End of Player -->
 
