--- a/src/navbar-player.html
+++ b/src/navbar-player.html
@@ -27,23 +27,46 @@
 
   <!-- Player -->
 
-  <div class="container d-flex flex-row justify-content-center">ciao</div>
+  <div class="container player-container container-fluid fixed-bottom mt-2 w-100">
 
-  <!-- End of Player -->
+    <div class="w-40 d-flex flex-row justify-content-between bg-player">
+      <div class="d-flex flex-row">
+        <img class="img-player" width="100%" height="100%" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png"
+          alt="queen-the-game-cover-art">
+        <div class="d-flex flex-column m-0">
+          <h5 class="title-song d-flex">Another One Bites The Dust - Remastered 2011 </h5>
+          <p class="artist-name">Queen</p>
+        </div>
+      </div>
+      <div class="col-6 w-50 controls-player d-flex justify-content-between">
+        <a href="#"><img src="/assets/playicons/Shuffle.png" alt="shuffle-icon">
+        </a>
+        <a href="#"><img src="/assets/playicons/Previous.png" alt="previous-icon">
+        </a>
+        <a href="#"><img src="/assets/playicons/Pause.png" alt="pause-icon">
+        </a>
+        <a href="#"><img src="/assets/playicons/Next.png" alt="next-icon">
+        </a>
+        <a href="#"><img src="/assets/playicons/Repeat.png" alt="repeat-icon">
+        </a>
+      </div>
+    </div>
+
+    <!-- End of Player -->
 
 
 
 
-  <script src="./app.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
-    crossorigin="anonymous"></script>
+    <script src="./app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+      integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
