recently_played title section and black bg to body

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -83,6 +83,11 @@
       <!-- Recently Played -->
       <section id="recently-played">
         <div class="container-fluid">
+          <div class="row my-3">
+            <h4 class="mr-auto"> <b>Recently played</b> </h4>
+            <h6>SEE ALL</h6>
+          </div>
+          
           <div class="custom-row">
             
             <div class="column">
