--- a/src/navbar-player.html
+++ b/src/navbar-player.html
@@ -38,7 +38,7 @@
         <img class="img-player" width="100%" height="100%" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png"
           alt="queen-the-game-cover-art">
         <div class="d-flex flex-column m-0">
-          <h5 class="title-song d-flex">Another One Bites The Dust - Remastered 2011 </h5>
+          <h5 class="d-flex">Another One Bites The Dust - Remastered 2011 </h5>
           <p class="artist-name">Queen</p>
         </div>
       </div>
@@ -54,9 +54,20 @@
         <a href="#"><img src="/assets/playicons/Repeat.png" alt="repeat-icon">
         </a>
       </div>
+      <div class="ms-auto right-icons-player">
+        <i class="bi bi-text-indent-left"></i>
+        <i class="bi bi-speaker-fill"></i>
+        <div class="right-icon-volume">
+          <i class="bi bi-volume-up"></i>
+          <input class="input-player" type="range" value="100" />
+        </div>
+      </div>
+
     </div>
 
     <!-- End of Player -->
+
+
 
 
 
