fixed card text

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -42,7 +42,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -52,7 +52,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -62,7 +62,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -72,7 +72,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -82,7 +82,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -92,7 +92,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -102,7 +102,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -112,7 +112,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -125,6 +125,14 @@
       <!-- Shows to try  -->
       <section id="shows-to-try">
         <div class="container-fluid">
+          <span>
+            <div class="row d-block my-3">
+            <span class="d-inline">
+              <h4 class="mr-auto"> <b>Recently played</b> </h4>
+              <h6>SEE ALL</h6>
+            </span>
+          </div>
+          </span>
 
           <div class="custom-row">
             <div class="column">
@@ -132,7 +140,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -142,7 +150,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -152,7 +160,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -162,7 +170,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -172,7 +180,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -182,7 +190,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -192,7 +200,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
@@ -202,11 +210,13 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
+
           </div>
+
         </div>
       </section>
       <!-- End of shows to try  -->
