--- a/src/played_shows.html
+++ b/src/played_shows.html
@@ -95,10 +95,13 @@
   <!-- Shows to try  -->
   <section id="shows-to-try">
     <div class="container-fluid">
-      <div class="row my-3">
-        <h4 class="mr-auto mt-5"> <b>Shows to try</b> </h4>
-        <h6 class="mt-5">SEE ALL</h6>
-      </div>
+        <div class="row my-3">
+            <span class="mr-auto">
+              <h4 class=" mt-5"> <b>Shows to try</b> </h4>
+              <p>Podcast we think you'll get hooked on</p>
+          </span>
+          <h6 class="mt-5 align-self-end pb-2">SEE ALL</h6>
+        </div>
       
       <div class="custom-row">
         <div class="column">
