--- a/src/homepage.html
+++ b/src/homepage.html
@@ -25,7 +25,7 @@
       <!-- Navbar -->
 
       <aside id="nav">
-          <div class=" row d-flex flex-column ml-3 align-items-start" style="height: 100%;">
+          <div class=" row d-flex flex-column ml-3 align-items-start" style="height: 100%; position:relative">
               <div class="col flex-grow-0" style="max-width: 0.33%;">
                   <!--the nav menu collapse on small screen-->
                  <div class="d-flex mt-3 mx-3"><img src="/assets/logo/Spotify_Logo_White.png" alt="" srcset="" width="130px">
@@ -40,7 +40,7 @@
                </div>
                <div class=" d-flex align-items-center mt-3 mx-3 text-muted">
                 <img src="/assets/logo/library.png" style="width: 1.5rem; " class=""></img> 
-                <div class=" d-inline  w-100 font-weight-bold ml-3 "><p class="h6">Your library</p> </div>
+                <div class=" d-inline  w-100 font-weight-bold ml-3 ">Your library </div>
              </div>
              <div class=" d-flex align-items-center mt-3 mx-3 text-muted">
               <img src="" style="width: 1.5rem; "></img> 
@@ -53,7 +53,7 @@
                </div>
 
           <div class=" d-flex align-items-center mt-2 mx-3 text-muted">
-            <i class="bi bi-heart-fill" style="font-size: 1.5rem;"></i> 
+            <img src="/assets/homepage/liked songs.jpg"  style="width: 1.5rem; "alt="" srcset="">
             <div class="  font-weight-bold ml-3">Liked Songs</div>
          </div>
 
@@ -62,7 +62,7 @@
 
               <div class="col-md-2 mt-5 mx-2 songs overflow-auto" style="max-width: 80%; max-height: 100%; ">
 
-               <div class="d-flex align-items-center text-muted   mt-2"><p>Song title</p></div>
+               <div class="d-flex align-items-center text-muted  mt-2 " ><p>Song title</p></div>
                <div class="d-flex align-items-center text-muted text-justify  mt-1"><p>Song title</p></div>
                <div class="d-flex align-items-center text-muted text-justify  mt-1"><p>Song title</p></div>
                <div class="d-flex align-items-center text-muted text-justify  mt-1"><p>Song title</p></div>
@@ -71,6 +71,11 @@
                <div class="d-flex align-items-center text-muted text-justify  mt-1"><p>Song title</p></div>
             </div>
       
+
+        <div class="d-flex flex-column align-items-baseline text-right bottom_nav">
+          <i class="bi bi-arrow-down-circle" style="font-size: 1.5rem;" ></i>
+          <div class="text-right text-white" style="position: absolute;">Install App</div>
+        </div>
          </div> 
       </aside>
 
