--- a/src/homepage.html
+++ b/src/homepage.html
@@ -21,10 +21,12 @@
   
   <div class="container-fluid d-flex flex-row">
     <!-- Navbar -->
-    
+    <div class="d-none d-md-flex col-md-2">
+
+    </div>
     <!-- End of Navbar-->
     
-    <main>
+    <main class="col-md-10">
       <!-- Good Morning -->
       <section class="container-fluid good-morning d-flex flex-column pb-5">
         <div class="row d-flex justify-content-between pt-3">
