--- a/src/homepage.html
+++ b/src/homepage.html
@@ -185,7 +185,7 @@
                 <img src="../assets/homepage/img1.jpg" class="card-img-top" alt="cover album">
                 <div class="card-body p-0 my-1">
                   <h5 class="card-title"> <b>Album Title</b> </h5>
-                  <p class="card-text">Some quick example <br> text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Some quick example  text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
