--- a/src/albumpage-bottom.html
+++ b/src/albumpage-bottom.html
@@ -25,120 +25,152 @@
       
       <!--bottom album section-->
       <section id="songs-list">
-        <div class="container-fluid">
+        <div class="container-fluid mx-0">
           <div class="row d-flex justify-content-center my-3">
-            <div class="col-1 d-flex justify-content-center my-0">
-              <p class="light-text my-0 align-self-center">1</p>
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">#</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">title</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto d-md-flex justify-content-md-center my-0">
+              <i class="bi bi-clock my-0 align-self-center"></i>
             </div>
-            <div class="col-9 my-0">
-              <p class="my-0">20th century fox fanfare</p>
-              <p class="light-text my-0">queen</p>
-            </div>
-            <div class="col-2 d-block ml-auto d-md-flex justify-content-md-center my-0">
+          </div>
+          
+          <div class="row d-flex justify-content-center my-3">
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">1</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">20th century fox fanfare</p>
+                <p class="light-text my-0">queen</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto align-self-center d-md-flex justify-content-md-center my-0">
               <p class="light-text my-0 align-self-center">0:25</p>
             </div>
           </div>
 
           <div class="row d-flex justify-content-center my-3">
-            <div class="col-1 d-flex justify-content-center my-0">
-              <p class="light-text my-0 align-self-center">2</p>
-            </div>
-            <div class="col-9 my-0">
-              <p class="my-0">somebody to love</p>
-              <p class="light-text my-0">queen</p>
-            </div>
-            <div class="col-2 d-block ml-auto d-md-flex justify-content-md-center my-0">
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">2</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">somebody to love</p>
+                <p class="light-text my-0">queen</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto align-self-center d-md-flex justify-content-md-center my-0">
               <p class="light-text my-0 align-self-center">4:55</p>
             </div>
           </div>
 
           <div class="row d-flex justify-content-center my-3">
-            <div class="col-1 d-flex justify-content-center my-0">
-              <p class="light-text my-0 align-self-center">3</p>
-            </div>
-            <div class="col-9 my-0">
-              <p class="my-0">doing all right - ...revisited</p>
-              <p class="light-text my-0">smile</p>
-            </div>
-            <div class="col-2 d-block ml-auto d-md-flex justify-content-md-center my-0">
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">3</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">doing all right - ...revisited</p>
+                <p class="light-text my-0">smile</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto align-self-center d-md-flex justify-content-md-center my-0">
               <p class="light-text my-0 align-self-center">3:16</p>
             </div>
           </div>
 
           <div class="row d-flex justify-content-center my-3">
-            <div class="col-1 d-flex justify-content-center my-0">
-              <p class="light-text my-0 align-self-center">4</p>
-            </div>
-            <div class="col-9 my-0">
-              <p class="my-0">keep yourself alive - live at the rainbow</p>
-              <p class="light-text my-0">queen</p>
-            </div>
-            <div class="col-2 d-block ml-auto d-md-flex justify-content-md-center my-0">
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">4</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">keep yourself alive - live </p>
+                <p class="light-text my-0">smile</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto align-self-center d-md-flex justify-content-md-center my-0">
               <p class="light-text my-0 align-self-center">3:56</p>
             </div>
           </div>
 
           <div class="row d-flex justify-content-center my-3">
-            <div class="col-1 d-flex justify-content-center my-0">
-              <p class="light-text my-0 align-self-center">5</p>
-            </div>
-            <div class="col-9 my-0">
-              <p class="my-0">killer queen</p>
-              <p class="light-text my-0">queen</p>
-            </div>
-            <div class="col-2 d-block ml-auto d-md-flex justify-content-md-center my-0">
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">5</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">killer queen</p>
+                <p class="light-text my-0">queen</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto align-self-center d-md-flex justify-content-md-center my-0">
               <p class="light-text my-0 align-self-center">2:59</p>
             </div>
           </div>
 
           <div class="row d-flex justify-content-center my-3">
-            <div class="col-1 d-flex justify-content-center my-0">
-              <p class="light-text my-0 align-self-center">6</p>
-            </div>
-            <div class="col-9 my-0">
-              <p class="my-0">fat bottomed girls - live in paris</p>
-              <p class="light-text my-0">queen</p>
-            </div>
-            <div class="col-2 d-block ml-auto d-md-flex justify-content-md-center my-0">
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">6</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">fat bottomed girls - live in paris</p>
+                <p class="light-text my-0">queen</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto align-self-center d-md-flex justify-content-md-center my-0">
               <p class="light-text my-0 align-self-center">4:37</p>
             </div>
           </div>
 
           <div class="row d-flex justify-content-center my-3">
-            <div class="col-1 d-flex justify-content-center my-0">
-              <p class="light-text my-0 align-self-center">7</p>
-            </div>
-            <div class="col-9 my-0">
-              <p class="my-0">bohemian rapsody</p>
-              <p class="light-text my-0">queen</p>
-            </div>
-            <div class="col-2 d-block ml-auto d-md-flex justify-content-md-center my-0">
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">7</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">bohemian rapsody</p>
+                <p class="light-text my-0">queen</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto align-self-center d-md-flex justify-content-md-center my-0">
               <p class="light-text my-0 align-self-center">5:54</p>
             </div>
           </div>
   
           <div class="row d-flex justify-content-center my-3">
-            <div class="col-1 d-flex justify-content-center my-0">
-              <p class="light-text my-0 align-self-center">8</p>
-            </div>
-            <div class="col-9 my-0">
-              <p class="my-0">now i'm here - live at the hammersmith odeon</p>
-              <p class="light-text my-0">queen</p>
-            </div>
-            <div class="col-2 d-block ml-auto d-md-flex justify-content-md-center my-0">
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">8</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">now i'm here - live </p>
+                <p class="light-text my-0">queen</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto align-self-center d-md-flex justify-content-md-center my-0">
               <p class="light-text my-0 align-self-center">4:25</p>
             </div>
           </div>
   
           <div class="row d-flex justify-content-center my-3">
-            <div class="col-1 d-flex justify-content-center my-0">
-              <p class="light-text my-0 align-self-center">4</p>
-            </div>
-            <div class="col-9 my-0">
-              <p class="my-0">crazy little thing called love</p>
-              <p class="light-text my-0">queen</p>
-            </div>
-            <div class="col-2 d-block ml-auto d-md-flex justify-content-md-center my-0">
+            <span class="d-flex d-inline align-self-center">
+              <div class="col-1 d-flex justify-content-center my-0">
+                <p class="light-text my-0 align-self-center">9</p>
+              </div>
+              <div class="col-9 my-0">
+                <p class="my-0">crazy little thing called love</p>
+                <p class="light-text my-0">queen</p>
+              </div>
+            </span>
+            <div class="col-2 d-inline ml-auto align-self-center d-md-flex justify-content-md-center my-0">
               <p class="light-text my-0 align-self-center">2:43</p>
             </div>
           </div>
