artist-list added

--- a/src/artistpage.html
+++ b/src/artistpage.html
@@ -64,9 +64,9 @@
         <!-- */*/*/*/*/*/*/*/* End of Navbar */*/*/*/*/*/*/*/*/*/*/* -->
 
         <!-- */*/*/*/*/*/*/*/*  Artist Page */*/*/*/*/*/*/*/*/*/*/* -->
-        <div class="col-lg-10 col-md-10">
+        <div class="col-lg-10 col-md-10" style="width: 100%;">
           <!-- Jumbotron -->
-          <div class="container" style="background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../assets/artistpage/jumbotron.jpg'); background-position: center; height: 50vh;">
+          <div class="container-fluid" style="background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../assets/artistpage/jumbotron.jpg'); background-position: center; height: 50vh;">
             <div class="row d-flex justify-content-between pt-3 h-100">
               <div class="col-lg-9">
                 <div class="d-flex justify-content-between pb-5" style="width: 8%;">
@@ -87,13 +87,67 @@
                 </div>
               </div>
             </div>
-
           </div>
           <!-- ENd of Jumbotron-->
 
           <!-- Song List -->
-          <div>
-
+          <div class="artist-list">
+            <div class="d-flex justify-content-between align-items-center pt-4 ml-3" style="width: 20%;">
+              <div class="btn-pause d-flex justify-content-center align-items-center"><i class="bi bi-pause"></i></div>
+              <a class="btn btn-outline-light" style="font-size: .9rem;">Follow</a>
+              <i class="bi bi-three-dots text-white" style="font-size: 1.3rem;"></i>
+            </div>
+            <div>
+              <h3 class="text-white font-weight-bolder mt-4 ml-3">Popular</h3>
+              <div class="songs-list ml-3" style="width: 80%;">
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                  <div>
+                    <small class="mr-3"><i class="bi bi-bar-chart-fill" style="color: var(--green);"></i></small>
+                    <img class="mr-2" style="width: 3em;" src="../assets/artistpage/img1.jpg" alt="Album Cover">
+                    <small>Another One Bites The Dust - Remastered 2011</small>
+                  </div>
+                  <small>1,013,427,226</small>
+                  <small>3:34</small>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                  <div>
+                    <small class="mr-3">2</small>
+                    <img class="mr-2" style="width: 3em;" src="../assets/artistpage/img2.jpg" alt="Album Cover">
+                    <small>Another One Bites The Dust - Remastered 2011</small>
+                  </div>
+                  <small>1,013,427,226</small>
+                  <small>3:34</small>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                  <div>
+                    <small class="mr-3">3</small>
+                    <img class="mr-2" style="width: 3em;" src="../assets/artistpage/img3.jpg" alt="Album Cover">
+                    <small>Another One Bites The Dust - Remastered 2011</small>
+                  </div>
+                  <small>1,013,427,226</small>
+                  <small>3:34</small>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                  <div>
+                    <small class="mr-3">4</small>
+                    <img class="mr-2" style="width: 3em;" src="../assets/artistpage/img4.jpg" alt="Album Cover">
+                    <small>Another One Bites The Dust - Remastered 2011</small>
+                  </div>
+                  <small>1,013,427,226</small>
+                  <small>3:34</small>
+                </div>
+                <div class="d-flex justify-content-between align-items-center mb-2">
+                  <div>
+                    <small class="mr-3">5</small>
+                    <img class="mr-2" style="width: 3em;" src="../assets/artistpage/img5.jpeg" alt="Album Cover">
+                    <small>Another One Bites The Dust - Remastered 2011</small>
+                  </div>
+                  <small>1,013,427,226</small>
+                  <small>3:34</small>
+                </div>
+              </div>
+              <div></div>
+            </div>
           </div>
           <!--End of Song List-->
         </div>
