--- a/src/artistpage.html
+++ b/src/artistpage.html
@@ -22,7 +22,7 @@
       <div class="row">
 
         <!-- */*/*/*/*/*/*/*/*  Navbar */*/*/*/*/*/*/*/*/*/*/* -->
-        <div class="col-lg-2 col-md-2" style="background-color: rgb(18,18,18); height: 100vh;">
+        <div class="col-lg-2 col-md-2 sticky-top" style="background-color: rgb(18,18,18); height: 100vh;">
           <nav class="nav d-flex flex-column justify-content-between">
             <div class="nav-logo py-3">
               <img style="width: 6em;" src="../assets/logo/Spotify_Logo_White.png" alt="Logo">
