--- a/src/albumpage.html
+++ b/src/albumpage.html
@@ -65,7 +65,58 @@
 
 
   <!-- Player -->
+  <div class="player-wrapper container-fluid px-0 fixed-bottom">
 
+    <div class="d-block d-md-flex flex-md-row justify-content-between bg-player">
+
+      <!--  img + title + artist-name -->
+      <div class="d-flex align-items-center img-wrapper mt-2 col-3 col-md-1">
+        <img class="img-album" width="100%" height="100%" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png"
+          alt="queen-the-game-cover-art">
+        <div class="d-flex flex-column mt-3 pl-3">
+          <h5>Another One Bites The Dust - Remastered 2011 </h5>
+          <p class="artist-name">Queen</p>
+        </div>
+        <div class="d-flex col-1 ml-2"><i class="bi bi-heart mr-3" id="heart-player"></i>
+          <i class="bi bi-aspect-ratio"></i>
+        </div>
+      </div>
+      <!--  end img + title + artist-name -->
+
+      <!-- play icons  -->
+      <div class="offset-2 col-2 col-md-3 w-100 controls-player">
+        <div class="d-flex justify-content-between mt-2">
+          <a href="#"><img src="/assets/playicons/Shuffle.png" alt="shuffle-icon">
+          </a>
+          <a href="#"><img src="/assets/playicons/Previous.png" alt="previous-icon">
+          </a>
+          <a href="#"><img class="pause-icon-player" src="/assets/playicons/Pause.png" alt="pause-icon">
+          </a>
+          <a href="#"><img src="/assets/playicons/Next.png" alt="next-icon">
+          </a>
+          <a href="#"><img src="/assets/playicons/Repeat.png" alt="repeat-icon">
+          </a>
+        </div>
+        <div class="d-flex align-items-center player-part">
+          <span>0.12</span>
+          <span id="hr"></span>
+          <span>3.34</span>
+        </div>
+      </div>
+      <!-- end play icons  -->
+
+      <!--  icons-right-volume -->
+      <div class="d-flex d-inline justify-content-start">
+        <div class="d-flex d-inline col-4 col-md-2 mt-3">
+          <i class="bi bi-text-indent-left pr-2"></i>
+          <i class="bi bi-speaker-fill pr-2"></i>
+          <i class="bi bi-volume-up"></i>
+          <div class="input-wrapper"><input class="ml-1" id="input-player" type="range" value="100" /></div>
+        </div>
+      </div>
+      <!--  end icons-right-volume -->
+    </div>
+  </div>
   <!-- End of Player-->
 
 
