develop -> add missing div container

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   
-   
+  <div class="container-fluid d-flex flex-row">
     <!-- Navbar -->
     <aside id="nav col-md-2">
       <div class=" row d-flex flex-column ml-3 align-items-start" style="height: 100%; position:relative">
@@ -423,7 +423,7 @@
     
     <!-- End of Player -->
 
-  
+  </div>
   
   
   <script src="./app.js"></script>
