--- a/src/albumpage.html
+++ b/src/albumpage.html
@@ -45,10 +45,12 @@
     <!-- end img + text -->
 
     <!--  buttons part -->
-    <div class="position-absolute album-btn">
-      <a id="play-btn-album"><img src="/assets/playicons/Play.png" width="15px" alt=""></a>
-      <i class="bi bi-heart"></i>
-      <a id="dots-btn-album">...</a>
+    <div class="flex-row align-content-center buttons-wrapper">
+      <div class="position-absolute album-btn">
+        <a id="play-btn-album"><img src="/assets/playicons/Play.png" width="15px" alt=""></a>
+        <i class="bi bi-heart"></i>
+        <a id="dots-btn-album">...</a>
+      </div>
     </div>
     <!--  end buttons part -->
 
@@ -70,34 +72,34 @@
     <div class="d-block d-md-flex flex-md-row justify-content-between bg-player">
 
       <!--  img + title + artist-name -->
-      <div class="d-flex align-items-center img-wrapper mt-2 col-3 col-md-1">
+      <div class="d-flex justify-items-center img-wrapper mt-2 col-3 col-md-1">
         <img class="img-album" width="100%" height="100%" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png"
           alt="queen-the-game-cover-art">
         <div class="d-flex flex-column mt-3 pl-3">
           <h5>Another One Bites The Dust - Remastered 2011 </h5>
           <p class="artist-name">Queen</p>
         </div>
-        <div class="d-flex col-1 ml-2"><i class="bi bi-heart mr-3" id="heart-player"></i>
+        <div class="d-flex col-1 ml-2 mt-2"><i class="bi bi-heart mr-3" id="heart-player"></i>
           <i class="bi bi-aspect-ratio"></i>
         </div>
       </div>
       <!--  end img + title + artist-name -->
 
       <!-- play icons  -->
-      <div class="offset-2 col-2 col-md-3 w-100 controls-player">
-        <div class="d-flex justify-content-between mt-2">
+      <div class="controls-player">
+        <div class="offset-6 col-1 col-md-2 d-flex justify-content-between mt-2">
           <a href="#"><img src="/assets/playicons/Shuffle.png" alt="shuffle-icon">
           </a>
-          <a href="#"><img src="/assets/playicons/Previous.png" alt="previous-icon">
+          <a><img src="/assets/playicons/Previous.png" alt="previous-icon">
           </a>
-          <a href="#"><img class="pause-icon-player" src="/assets/playicons/Pause.png" alt="pause-icon">
+          <a><i class="bi bi-play-fill play-icon-player"></i>
           </a>
-          <a href="#"><img src="/assets/playicons/Next.png" alt="next-icon">
+          <a><img src="/assets/playicons/Next.png" alt="next-icon">
           </a>
-          <a href="#"><img src="/assets/playicons/Repeat.png" alt="repeat-icon">
+          <a><img src="/assets/playicons/Repeat.png" alt="repeat-icon">
           </a>
         </div>
-        <div class="d-flex align-items-center player-part">
+        <div class="d-flex align-items-center justify-content-start player-part">
           <span>0.12</span>
           <span id="hr"></span>
           <span>3.34</span>
@@ -106,31 +108,29 @@
       <!-- end play icons  -->
 
       <!--  icons-right-volume -->
-      <div class="d-flex d-inline justify-content-start">
-        <div class="d-flex d-inline col-4 col-md-2 mt-3">
-          <i class="bi bi-text-indent-left pr-2"></i>
-          <i class="bi bi-speaker-fill pr-2"></i>
-          <i class="bi bi-volume-up"></i>
-          <div class="input-wrapper"><input class="ml-1" id="input-player" type="range" value="100" /></div>
+      <div class="d-flex flex-row justify-content-end mr-5 mt-2 col-4 col-md-2">
+        <i class="bi bi-text-indent-left pr-2"></i>
+        <i class="bi bi-speaker-fill pr-2"></i>
+        <i class="bi bi-volume-up"></i>
+        <div class="input-wrapper"><input class="ml-1" id="input-player" type="range" value="100" />
         </div>
+        <!--  end icons-right-volume -->
       </div>
-      <!--  end icons-right-volume -->
     </div>
-  </div>
-  <!-- End of Player-->
+    <!-- End of Player-->
 
 
 
-  <script src="./app.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
-    crossorigin="anonymous"></script>
+    <script src="./app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+      integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
