--- a/src/albumpage.html
+++ b/src/albumpage.html
@@ -73,9 +73,9 @@
 
       <!--  img + title + artist-name -->
       <div class="d-flex justify-items-center img-wrapper mt-2 col-3 col-md-1">
-        <img class="img-album" width="100%" height="100%" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png"
+        <img class="img-album-player" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png"
           alt="queen-the-game-cover-art">
-        <div class="d-flex flex-column mt-3 pl-3">
+        <div class="d-flex flex-column mt-1 pl-1 mt-lg-3 pl-lg-3">
           <h5>Another One Bites The Dust - Remastered 2011 </h5>
           <p class="artist-name">Queen</p>
         </div>
@@ -108,14 +108,14 @@
       <!-- end play icons  -->
 
       <!--  icons-right-volume -->
-      <div class="d-flex flex-row justify-content-end mr-5 mt-2 col-4 col-md-2">
+      <div class="d-flex flex-row justify-content-end mr-5 mt-2 col-4 col-md-2 right-icons-player">
         <i class="bi bi-text-indent-left pr-2"></i>
         <i class="bi bi-speaker-fill pr-2"></i>
         <i class="bi bi-volume-up"></i>
         <div class="input-wrapper"><input class="ml-1" id="input-player" type="range" value="100" />
         </div>
-        <!--  end icons-right-volume -->
       </div>
+      <!--  end icons-right-volume -->
     </div>
     <!-- End of Player-->
 
