--- a/src/artistpage.html
+++ b/src/artistpage.html
@@ -18,27 +18,27 @@
     <title>Artist</title>
   </head>
   <body>
-    <main class="container-fluid">
+    <main class="container-100 container-sm-100 container-md-fluid">
       <div class="row">
 
         <!-- */*/*/*/*/*/*/*/*  Navbar */*/*/*/*/*/*/*/*/*/*/* -->
-        <div class="col-lg-2 col-md-2 sticky-top" style="background-color: rgb(18,18,18); height: 100vh;">
+        <div class="custom-nav col-lg-2 col-md-2 h-md-100" style="background-color: rgb(18,18,18); height: 6vh;">
           <nav class="nav d-flex flex-column justify-content-between">
-            <div class="nav-logo py-3">
+            <div class="d-none d-sm-none d-md-block nav-logo py-3">
               <img style="width: 6em;" src="../assets/logo/Spotify_Logo_White.png" alt="Logo">
             </div>
             <div class="nav-links py-2">
-              <ul class="text-white">
-                <li><i class="bi bi-house-door-fill"></i> Home</li>
-                <li><i class="bi bi-search"></i> Search</li>
-                <li><i class="bi bi-music-note-list"></i>Your Library</li>
+              <ul class="d-flex d-md-block justify-content-around text-white">
+                <li><i class="bi bi-house-door-fill"></i> <span>Home</span></li>
+                <li><i class="bi bi-search"></i> <span>Search</span></li>
+                <li><i class="bi bi-music-note-list"></i><span>Your Library</span></li>
               </ul>
             </div>
-            <div class="py-1">
+            <div class="py-1 d-none d-sm-none d-md-block">
               <p class="text-white font-weight-bold" style="font-size: .9rem;"> <i class="bi bi-plus-square text-white" style="font-size: 1.5rem;"></i>  Create Playlist</p>
               <p class="text-white font-weight-bold" style="font-size: .9rem;"><img style="width: 1.5em;" src="../assets/homepage/liked songs.jpg" alt=""> Liked Songs</p>
             </div>
-            <div class="overflow-auto nav-list d-flex flex-column" style="font-size: .8rem; height: 50vh;">
+            <div class="d-none d-sm-none d-md-flex overflow-auto nav-list   flex-column" style="font-size: .8rem; height: 50vh;">
               <a href="#">Funky Heavy Bluesy</a>
               <a href="#">Your Top Songs 2020</a>
               <a href="#">In Love With You</a>
@@ -56,7 +56,7 @@
               <a href="#">Your Top Songs 2018</a>
               <a href="#">Jazz Classics Blue Note Edition</a>
             </div>
-            <div>
+            <div class="d-none d-sm-none d-md-block">
               <p class="text-start text-white" style="font-size: .8rem;"><i class="bi bi-arrow-down-circle"></i> Install App</p>
             </div>
           </nav>
@@ -66,7 +66,7 @@
         <!-- */*/*/*/*/*/*/*/*  Artist Page */*/*/*/*/*/*/*/*/*/*/* -->
         <div class="col-lg-10 col-md-10" style="width: 100%;">
           <!-- Jumbotron -->
-          <div class="container-fluid" style="background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../assets/artistpage/jumbotron.jpg'); background-position: center; height: 50vh;">
+          <div class="container-fluid" style="background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../assets/artistpage/jumbotron.jpg'); background-position: center;background-repeat: no-repeat; height: 50vh;">
             <div class="row d-flex justify-content-between pt-3 h-100">
               <div class="col-lg-9">
                 <div class="d-flex justify-content-between pb-5" style="width: 8%;">
