title of head changed

--- a/src/cards.html
+++ b/src/cards.html
@@ -15,7 +15,7 @@
     <!-- Root CSS -->
     <link rel="stylesheet" href="../style/root.css">
     
-    <title>Spotify</title>
+    <title>homepage rob</title>
 </head>
 <body>
     <div class="container-fluid d-flex flex-row">
