--- a/src/navbar.html
+++ b/src/navbar.html
@@ -11,7 +11,7 @@ html lang="en">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="../style/homepage.css">
     <link rel="stylesheet" href="../style/nav-player.css">
-    <link rel="stylesheet" href="/style/navbar_style.css">
+    <link rel="stylesheet" href="/style/navbar.css">
     <!-- Root CSS -->
     <link rel="stylesheet" href="../style/root.css">
 
@@ -41,7 +41,7 @@ html lang="en">
                 <div class=" d-inline  w-100 font-weight-bold ml-3 ">Library </div>
              </div>
              <div class=" d-flex align-items-center mt-1 mx-1  hover_link">
-              <img src="" style="width: 1.0rem; "></img> 
+              
               <div class="font-weight-bold mx-1 p-0  d-inline"></div>
            </div>
        
