--- a/src/navbar.html
+++ b/src/navbar.html
@@ -93,16 +93,16 @@ html lang="en">
 <div id="mobile_view">
          <div class="row d-flex justify-content-center  " style="width: 100%; padding-left: 20%; padding-right: 20%;">
            <div class="col-4 mt-2  d-flex flex-column align-items-center
-           text-muted ">
-                <i class="bi bi-house-door-fill  " style="font-size: 1.0rem;"></i> 
+            hover_link">
+                <i class="bi bi-house-door-fill hover_link " style="font-size: 1.0rem;"></i> 
                 <div class=""> <h6>Home</h6></div> 
             </div>
-           <div class="col-4  mt-2 d-flex flex-column align-items-center  text-muted">
+           <div class="col-4  mt-2 d-flex flex-column align-items-center  hover_link">
                 <i class="bi bi-search" style="font-size: 1.0rem;"></i> 
                 <div class=""> <h6 class="fs-xsm">Search</h6></div> 
               </div>
           
-           <div class="col-4  mt-2 d-flex flex-column align-items-center  text-muted">
+           <div class="col-4  mt-2 d-flex flex-column align-items-center  hover_link">
               <i class="bi bi-collection-fill" style="font-size: 1.0rem;"></i>
               <div class=""> <h6>Library</h6></div>           
             </div>
