--- a/src/homepage.html
+++ b/src/homepage.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="../style/root.css">
   
   <title>Spotify</title>
+  <link rel="icon" href="../assets/logo/green_spotify_logo.png">
 </head>
 <body>
   
