--- a/src/albumpage.html
+++ b/src/albumpage.html
@@ -103,7 +103,7 @@
   <div id="album-id-player" class="player-wrapper container-fluid px-0 fixed-bottom">
 
     <div class="row d-block d-flex flex-row justify-content-between bg-player">
-
+      <!--  ciao -->
       <!--  img + title + artist-name -->
       <div class="d-flex flex-row align-items-center img-wrapper mt-2 col-3 col-md-1">
         <img class="img-album-player" src=" /assets/playicons/c49c9f23611294a7f7fbcbee3a22b2af.png" width="300px"
