--- a/src/album-page.html
+++ b/src/album-page.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="../style/albumpage.css">
+    <link rel="stylesheet" href='../style/albumpage-bottom.css'>
     <link rel="stylesheet" href="../style/nav-player.css">
     <link rel="stylesheet" href="../style/artistpage.css">
     <!-- Root CSS -->
