--- a/src/album-page.html
+++ b/src/album-page.html
@@ -43,7 +43,7 @@
               <a href="#">Funky Heavy Bluesy</a>
               <a href="#">Your Top Songs 2020</a>
               <a href="#">In Love With You</a>
-              <a href="#">This Is Rod Stewart</a>
+              <a href="#">In Love With You</a>
               <a href="#">FRANCHISE ft. Young Thug</a>
               <a href="#">Your Top Songs 2019</a>
               <a href="#">Palleggio</a>
