--- a/src/login.html
+++ b/src/login.html
@@ -14,7 +14,9 @@
     <!-- Root CSS -->
     <link rel="stylesheet" href="../style/root.css">
 
+    <!-- Favicon -->
     <title>Login</title>
+    <link rel="icon" href="../assets/logo/green_spotify_logo.png">
   </head>
   <body style="background-color: white;">
 
