--- a/src/albumpage.html
+++ b/src/albumpage.html
@@ -28,6 +28,7 @@
 
 
   <!-- Jumbotron -->
+  <!-- ciao -->
   <!--  upper part  -->
   <div id="upper-nav-album" class="container-fluid">
     <div id="nav-album-page" class="d-none d-lg-flex justify-content-center">
