right_develop -> homepage -> move goodmorning class to his div child

--- a/src/home_Page.html
+++ b/src/home_Page.html
@@ -120,9 +120,9 @@
         <!-- */*/*/*/*/*/*/*/* End of Navbar */*/*/*/*/*/*/*/*/*/*/* -->
 
         <!-- */*/*/*/*/*/*/*/*  Album Page */*/*/*/*/*/*/*/*/*/*/* -->
-        <div class="col-12 col-md-10 good-morning" style="width: 100%;">
+        <div class="col-12 col-md-10" style="width: 100%;">
             <!-- Jumbotron -->
-            <div class="container-fluid" style="height: 50vh;">
+            <div class="container-fluid good-morning" style="height: 50vh;">
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="d-flex justify-content-between pb-5" style="width: 10%;">
