--- a/src/home_Page_responsive.html
+++ b/src/home_Page_responsive.html
@@ -25,11 +25,11 @@
     <main class="container-fluid">
         <div class="row">
             <!-- */*/*/*/*/*/*/*/*  Navbar */*/*/*/*/*/*/*/*/*/*/* -->
-            <div class="d-none col-md-2 sticky-top" style="background-color: rgb(18,18,18); height: 100vh;">
+            <div class="col-md-2 sticky-top" style="background-color: rgb(18,18,18); height: 100vh;">
                 <!-- Navbar -->    
                 
                 <div id="nav">
-                    <div class=" d-flex flex-column ml-1 align-items-start main_wrapper" style="height: 100%; position:relative">
+                    <div class=" d-none d-flex flex-column ml-1 align-items-start main_wrapper" style="height: 100%; position:relative">
                         <div class="col-2 flex-grow-0 first_column" style="max-width: 0.33%;">
                             
                             <div class="d-flex mt-3 mx-3 logo"><img src="/assets/logo/Spotify_Logo_White.png" alt="" srcset="" width="130px">
