--- a/src/home_Page.html
+++ b/src/home_Page.html
@@ -24,7 +24,7 @@
     <main class="container-fluid">
         <div class="row">
             <!-- */*/*/*/*/*/*/*/*  Navbar */*/*/*/*/*/*/*/*/*/*/* -->
-            <div class="col-md-2 sticky-top" style="background-color: rgb(18,18,18); height: 100vh;">
+            <div class="" style="background-color: rgb(18,18,18); height: 100vh;">
                 <!-- Navbar -->    
                 
                 <aside id="nav">
@@ -121,7 +121,7 @@
         </div>
         <!-- */*/*/*/*/*/*/*/* End of Navbar */*/*/*/*/*/*/*/*/*/*/* -->
         <!-- */*/*/*/*/*/*/*/*  Album Page */*/*/*/*/*/*/*/*/*/*/* -->
-        <div class="col-12 col-md-10 good-morning" style="width: 100%;">
+        <div class="col-12 d-flex flex-wrap col-md-10 good-morning" style="width: 100%;">
             <!-- Jumbotron -->
             <div class="container-fluid" style="height: 50vh;">
                 <div class="row">
@@ -211,7 +211,7 @@
             
             <!-- Recently Played ROBY-->
             <section id="recently-played">
-                <div class="container-fluid">
+                <div class="d-flex col-12 col-3 col-lg 4">
                     <div class="row my-3">
                         <h4 class="mr-auto mt-5"> <b>Recently played</b> </h4>
                         <h6 class="mt-5">SEE ALL</h6>
