--- a/src/home_Page.html
+++ b/src/home_Page.html
@@ -28,7 +28,7 @@
     <main class="container-fluid">
         <div class="row">
             <!-- */*/*/*/*/*/*/*/*  Navbar */*/*/*/*/*/*/*/*/*/*/* -->
-            <div class="col-md-2 sticky-top" style="background-color: rgb(18,18,18); height: 100vh;">
+            <div class="col-md-2 sticky-top d-none d-md-flex">
                 <!-- Navbar -->
 
                 <aside id="nav">
@@ -139,7 +139,7 @@
 
                 <!-- mobile -->
                 <div id="mobile_view">
-                    <div class="row d-flex justify-content-center  "
+                    <div class="row d-flex justify-content-center d-md-flex "
                         style="width: 100%; padding-left: 20%; padding-right: 20%;">
                         <div class="col-4 mt-2  d-flex flex-column align-items-center
                         hover_link">
