few buttons hovering, links <a>
final player code in the artist page
added few <a> wrapping some link like "home" in the nav, linked our home html.
same for the "queen" link.
Button play nd pause both pulsing on hover
[11:53]
oh, now i need to go to work, only thing im not happy with is "home" in nav, in the artist page, became blue if u hover.

--- a/src/album_Page.html
+++ b/src/album_Page.html
@@ -210,7 +210,7 @@
                 <h1>Bohemian Rhapsody(The Original Soundtrack)</h1>
                 <p><img src="/assets/albumpage/bohemian-rhapsody-cover.png" class="rounded-img"
                     alt="band-logo-img-spotify"><span>
-                    <a class="enlight text-white" id="band-name" href="#">Queen</a></span> <span
+                    <a class="enlight text-white" id="band-name" href="artist_Page.html">Queen</a></span> <span
                     class="d-none d-md-inline">-
                     2018 - 22 songs, 1 hr
                     19 min
@@ -418,7 +418,7 @@
           height="300px" alt="queen-the-game-cover-art">
         <div class="d-flex flex-column pl-1">
           <h5 class="enlight">Another One Bites The Dust - Remastered 2011</h5>
-          <p class="artist-name">Queen</p>
+          <p class="artist-name"><a href="artist_Page.html">Queen</a></p>
         </div>
         <div class="d-flex col-1 mb-4 align-items-center">
           <i class="bi bi-heart mr-3 enlight" id="heart-player"></i>
