--- a/src/album_Page.html
+++ b/src/album_Page.html
@@ -39,7 +39,8 @@
               </div>
               <div class=" d-flex align-items-center mt-4 mx-1  hover_link">
                 <i class="bi bi-house-door-fill " style="font-size: 1.0rem;"></i>
-                <div class="  font-weight-bold ml-3">Home</div>
+                <div class=" font-weight-bold ml-3"><a href="home_Page.html" style="text-decoration: none;">Home</a>
+                </div>
               </div>
               <div class=" d-flex align-items-center mt-1 mx-1  hover_link">
                 <i class="bi bi-search" style="font-size: 1.0rem;"></i>
@@ -418,7 +419,7 @@
           height="300px" alt="queen-the-game-cover-art">
         <div class="d-flex flex-column pl-1">
           <h5 class="enlight">Another One Bites The Dust - Remastered 2011</h5>
-          <p class="artist-name"><a href="artist_Page.html">Queen</a></p>
+          <p class="artist-name"><a href="artist_Page.html" style="text-decoration: none;">Queen</a></p>
         </div>
         <div class="d-flex col-1 mb-4 align-items-center">
           <i class="bi bi-heart mr-3 enlight" id="heart-player"></i>
