--- a/src/artist_Page.html
+++ b/src/artist_Page.html
@@ -280,7 +280,7 @@
           height="300px" alt="queen-the-game-cover-art">
         <div class="d-flex flex-column pl-1">
           <h5 class="enlight">Another One Bites The Dust - Remastered 2011</h5>
-          <p class="artist-name"><a href="artist_Page.html">Queen</a></p>
+          <p class="artist-name"><a href="artist_Page.html" style="text-decoration: none;">Queen</a></p>
         </div>
         <div class="d-flex col-1 mb-4 align-items-center">
           <i class="bi bi-heart mr-3 enlight" id="heart-player"></i>
