artist-modal ui on progress

--- a/src/artist_Page.html
+++ b/src/artist_Page.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <main class="container-100 container-sm-100 container-md-fluid">
+  <main class="artist-page container-100 container-sm-100 container-md-fluid">
     <div class="row">
 
       <!-- */*/*/*/*/*/*/*/*  Navbar */*/*/*/*/*/*/*/*/*/*/* -->
@@ -326,6 +326,7 @@
   </div>
   <!-- End of Player-->
   <script src="./app.js"></script>
+  <script src="./artistfetch.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
