3 fetches from RapidApi.com
3 fetches from 3 different artists albums + 3 buttons with 3 different event listeners

--- a/src/home_Page.html
+++ b/src/home_Page.html
@@ -275,6 +275,14 @@
                 <div class="margin-top">
                     <!-- Recently Played ROBY-->
                     <section id="recently-played">
+                        <div class="d-flex justify-content-center">
+                            <button id="loadBtn1" class="btn btn-danger mx-2 align-middle">Load album
+                                1</button>
+                            <button id="loadBtn2" class="btn btn-warning mx-2 align-middle">Load album
+                                2</button>
+                            <button id="loadBtn3" class="btn btn-primary mx-2 align-middle">Load album
+                                3</button>
+                        </div>
                         <div class="container-fluid">
                             <div class="row my-3">
                                 <h4 class="mr-auto mt-5"> <b>Recently played</b> </h4>
@@ -645,7 +653,7 @@
         </div>
     </div>
     <!-- End of Player-->
-
+    <script src="/M3-D2-DAVIDE/index.js"></script>
 
 </body>
 
