search functionality implemented

--- a/src/home_Page_search.html
+++ b/src/home_Page_search.html
@@ -45,7 +45,7 @@
                                 <div class="  font-weight-bold ml-3"><a href="home_Page.html"
                                         style="text-decoration: none;">Home</a></div>
                             </div>
-                            <div id="search" class=" d-flex align-items-center mt-1 mx-1 hover_link">
+                            <div id="nav-search" class=" d-flex align-items-center mt-1 mx-1 hover_link">
                                 <i class="bi bi-search" style="font-size: 1.0rem;"></i>
                                 <div class="font-weight-bold ml-3">Search</div>
                             </div>
